--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "uuid": "^8.1.0"
   },
   "scripts": {
-    "start": "set PORT=80 && react-scripts start",
+    "start": "HTTPS=true SSL_CRT_FILE=./server.crt SSL_KEY_FILE=./server.key react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
